force-app/main/default/objects/PAdmission__c/PAdmission__c.object-meta.xml
<CustomObject>
    <label>PAdmission</label>
    <nameField>
        <displayFormat>PA-{000}</displayFormat>
        <label>PAdmissionNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAdmissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>