force-app/main/default/objects/PAdmission__c/fields/Attendee_ContactNo__c.field-meta.xml
<CustomField>
    <fullName>Attendee_ContactNo__c</fullName>
    <label>Attendee ContactNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>