force-app/main/default/objects/PAdmission__c/fields/AttendeeName__c.field-meta.xml
<CustomField>
    <fullName>AttendeeName__c</fullName>
    <label>AttendeeName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>