force-app/main/default/objects/PAdmission__c/fields/BedNo__c.field-meta.xml
<CustomField>
    <fullName>BedNo__c</fullName>
    <label>BedNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>