force-app/main/default/objects/PAdmission__c/fields/PA_Name__c.field-meta.xml
<CustomField>
    <fullName>PA_Name__c</fullName>
    <label>PA_Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>