force-app/main/default/objects/PAdmission__c/fields/PAge__c.field-meta.xml
<CustomField>
    <fullName>PAge__c</fullName>
    <label>PAge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>