force-app/main/default/objects/PAdmission__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <label>PaymentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partial Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>