force-app/main/default/objects/PAdmission__c/fields/PDOB__c.field-meta.xml
<CustomField>
    <fullName>PDOB__c</fullName>
    <label>PDOB</label>
    <type>Date</type>
</CustomField>