force-app/main/default/objects/PAdmission__c/fields/PGender__c.field-meta.xml
<CustomField>
    <fullName>PGender__c</fullName>
    <label>PGender</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>