force-app/main/default/objects/PAdmission__c/fields/PPhoneNo__c.field-meta.xml
<CustomField>
    <fullName>PPhoneNo__c</fullName>
    <label>PPhoneNo</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>