force-app/main/default/objects/PAdmission__c/fields/ReferedBy__c.field-meta.xml
<CustomField>
    <fullName>ReferedBy__c</fullName>
    <label>DoctorList</label>
    <referenceTo>DoctorList__c</referenceTo>
    <relationshipLabel>PAdmissions</relationshipLabel>
    <relationshipName>PAdmissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>