force-app/main/default/objects/PAdmission__c/fields/TotalPerAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalPerAmt__c</fullName>
    <label>TotalPerAmt</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>