force-app/main/default/objects/PAdmission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BedNo__c</columns>
    <columns>ReferedBy__c</columns>
    <columns>PA_Name__c</columns>
    <columns>PAge__c</columns>
    <columns>Patient_Email__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>PDOB__c</columns>
    <columns>PGender__c</columns>
    <columns>PPhoneNo__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>